# photo-info

./: .gitignore  MANIFEST.in  README.md  photo_info.py  pyproject.toml  requirements.txt  tests.py
src/photo_info/: __init__.py  __main__.py  cli.py  config.py  photo_info.py
test_files/: DSC_3106.md
tests/: test_config.py  test_photo_info.py
